Fix indirect seq validator
Signed-off-by: Matt Hess <matt.hess@swirldslabs.com>