@@ -21,6 +21,7 @@ import com.hedera.hapi.block.stream.StateProof;
 import com.hedera.hapi.node.base.Timestamp;
 import com.hedera.hapi.node.state.blockstream.MerkleLeaf;
 import com.hedera.node.app.blocks.impl.BlockImplUtils;
+import com.hedera.node.app.hapi.utils.CommonUtils;
 import com.hedera.pbj.runtime.io.buffer.Bytes;
 import com.swirlds.base.utility.Pair;
 import com.swirlds.state.SiblingHash;
@@ -47,6 +48,7 @@ class IndirectProofSequenceValidator {
     private final Map<Long, StateProof> actualIndirectProofs = new HashMap<>();
 
     private final Map<Long, Bytes> expectedBlockRootHashes = new HashMap<>();
+    private final Map<Long, Bytes> expectedPreviousBlockRootHashes = new HashMap<>();
 
     /**
      * The signed block proof corresponding to the latest signed block number. This is needed to
@@ -73,23 +75,27 @@ class IndirectProofSequenceValidator {
     }
 
     /**
-     * Tracks an indirect state proof for a given block number.
+     * Tracks the block proof for a given block number. This method should be invoked for each unsigned block
+     * <b>and</b> the signed block that ends the sequence.
      * <p>
-     * This method must be called in sequential order for each block, up to but not including the
-     * block. Once a signed block is encountered, call {@link #endOfSequence(Timestamp, BlockProof)} to
-     * finalize the sequence. Once the end of the sequence is signaled, no further indirect proofs
-     * can be registered.
+     * This method must be called in sequential order for each block, up to and including the signed
+     * block. Once the signed block is encountered, this method will call
+     * {@link #endOfSequence(Timestamp, BlockProof)} to finalize the sequence. Once the end of the sequence
+     * is signaled, no further indirect proofs can be registered.
      *
-     * @param blockNumber       the block number for which the indirect proof is being tracked
-     * @param proof             the block's (partial) indirect block proof
+     * @param blockNumber       the block number for which the block proof is being tracked
+     * @param proof             the actual block proof from the block (i.e. the test subject)
      * @param previousBlockHash the previous block's root hash
      * @param blockTimestamp    this block's consensus timestamp
-     * @param siblingHashes     the sibling hashes for this block's indirect proof. Note that the block's
-     *                          timestamp <b>must not</b> be included as a sibling
+     * @param siblingHashes     the sibling hashes for this block's proof (if any). This list should be
+     *                          empty for a signed block; for an unsigned block, it should enumerate _all_
+     *                          siblings in [currentBlock, signedBlockNum] (inclusive). Note that the
+     *                          signed block's timestamp <b>must not</b> be included as a sibling hash;
+     *                          it's handled separately
      * @throws IllegalStateException if the end of the sequence has already been reached, or if
      * the blocks are not tracked in sequential order
      */
-    void registerStateProof(
+    void registerProof(
             final long blockNumber,
             final @NonNull BlockProof proof,
             final @NonNull Bytes blockRootHash,
@@ -105,48 +111,61 @@ class IndirectProofSequenceValidator {
             firstUnsignedBlockNum = blockNumber;
         }
 
-        final var lastActualProofBlockNum =
-                actualIndirectProofs.keySet().stream().max(Long::compareTo).orElse(-1L);
-        assertTrue(
-                proof.hasBlockStateProof(),
-                "Indirect proof for block %s is missing a block state proof".formatted(blockNumber));
-        if (!expectedIndirectProofs.isEmpty() && lastActualProofBlockNum != blockNumber - 1) {
-            throw new IllegalStateException(
-                    ("Indirect proofs must be tracked in sequential order; last actual proof was "
-                                    + "for block %s, current actual proof given is for block %s")
-                            .formatted(lastActualProofBlockNum, blockNumber));
+        log.info("Registering proof for block {}", blockNumber);
+        if (proof.hasSignedBlockProof()) {
+            // Signal the end of the sequence
+            endOfSequence(blockTimestamp, proof);
+        } else {
+            final var lastActualProofBlockNum =
+                    actualIndirectProofs.keySet().stream().max(Long::compareTo).orElse(-1L);
+            assertTrue(
+                    proof.hasBlockStateProof(),
+                    "Indirect proof for block %s is missing a block state proof".formatted(blockNumber));
+            if (!expectedIndirectProofs.isEmpty() && lastActualProofBlockNum != blockNumber - 1) {
+                throw new IllegalStateException(
+                        ("Indirect proofs must be tracked in sequential order; last actual proof was "
+                                        + "for block %s, current actual proof given is for block %s")
+                                .formatted(lastActualProofBlockNum, blockNumber));
+            }
+
+            // Construct partial merkle paths for the expected indirect proof
+            // Block's Merkle Path 1: timestamp path (left child of the block's (sub)root)
+            final var timestampBytes = Timestamp.PROTOBUF.toBytes(blockTimestamp);
+            final var mp1 = new PartialMerklePath(
+                    MerkleLeaf.newBuilder()
+                            .blockConsensusTimestamp(timestampBytes)
+                            .build(),
+                    null,
+                    null);
+
+            // Block's Merkle Path 2: block contents path
+            // Technically we could roll the timestamp into the sibling hashes here, but for clarity we keep them
+            // separate
+            final var mp2 = new PartialMerklePath(null, previousBlockHash, siblingHashes);
+
+            // Block's Merkle Path 3: parent (i.e. combined hash of left child and right child)
+            // This is the combined result and should have no data
+
+            this.partialPathsByBlock.put(blockNumber, Pair.of(mp1, mp2));
+
+            // We can't verify the indirect proof until we have a signed block proof, so store the
+            // indirect proof for later verification
+            actualIndirectProofs.put(blockNumber, proof.blockStateProof());
         }
 
-        log.info("Registering unsigned block {}", blockNumber);
-
-        // Construct partial merkle paths for the expected indirect proof
-        // Block's Merkle Path 1: timestamp path (left child of the block's (sub)root)
-        final var timestampBytes = Timestamp.PROTOBUF.toBytes(blockTimestamp);
-        final var mp1 = new PartialMerklePath(
-                MerkleLeaf.newBuilder().blockConsensusTimestamp(timestampBytes).build(), null, null);
-
-        // Block's Merkle Path 2: block contents path
-        // Technically we could roll the timestamp into the sibling hashes here, but for clarity we keep them separate
-        final var mp2 = new PartialMerklePath(null, previousBlockHash, siblingHashes);
-
-        // Block's Merkle Path 3: parent (i.e. combined hash of left child and right child)
-        // This is the combined result and should have no data
-
-        this.partialPathsByBlock.put(blockNumber, Pair.of(mp1, mp2));
-
-        // We can't verify the indirect proof until we have a signed block proof, so store the
-        // indirect proof for later verification
-        actualIndirectProofs.put(blockNumber, proof.blockStateProof());
         expectedBlockRootHashes.put(blockNumber, blockRootHash);
-        log.info("Registered unsigned block {}", blockNumber);
+        expectedPreviousBlockRootHashes.put(blockNumber, previousBlockHash);
+
+        log.info("Registered proof for block {}", blockNumber);
     }
 
     /**
-     * Verifies the contents of the (built) indirect state proofs.
+     * Verifies the contents of all proofs (unsigned and signed) in the sequence
      */
     void verify() {
         if (!endOfSequenceReached) {
-            throw new IllegalStateException("Cannot verify indirect proof sequence: end of sequence not reached");
+            throw new IllegalStateException(
+                    "Cannot verify indirect proof sequence: end of sequence not reached, signed proof missing");
         }
 
         log.info(
@@ -156,14 +175,18 @@ class IndirectProofSequenceValidator {
 
         verifyIndirectProofs();
         verifyHashSequence();
+
+        log.info("Successfully verified sequence of proofs for blocks {} to {}", firstUnsignedBlockNum, signedBlockNum);
     }
 
     /**
-     * This method signals the end of the indirect proof sequence, thereby preventing tracking for any further indirect proofs. Triggers construction of all expected indirect proofs based on the partial proofs already collected.
+     * This method signals the end of the indirect proof sequence, thereby preventing tracking for any further
+     * block proofs. Triggers construction of all expected indirect proofs based on the partial proofs already
+     * collected.
      *
      * @param signedProof the TSS-signed block proof that ends the indirect proof sequence
      */
-    void endOfSequence(@NonNull final Timestamp signedTimestamp, @NonNull final BlockProof signedProof) {
+    private void endOfSequence(@NonNull final Timestamp signedTimestamp, @NonNull final BlockProof signedProof) {
         this.endOfSequenceReached = true;
         this.signedBlockTimestamp = signedTimestamp;
         this.signedProof = requireNonNull(signedProof);
@@ -180,9 +203,8 @@ class IndirectProofSequenceValidator {
         final long actualNumIndirectBlocks = actualMaxBlockNum - actualMinBlockNum + 1;
 
         log.info(
-                "Verifying expected indirect state proofs for blocks {} to {} (signed block {})",
+                "Verifying state proofs for unsigned blocks from {} to (signed) block {}",
                 firstUnsignedBlockNum,
-                signedBlockNum - 1,
                 signedBlockNum);
         final var combinedPathsSize = partialPathsByBlock.keySet().stream()
                 .sorted()
@@ -192,8 +214,8 @@ class IndirectProofSequenceValidator {
         assertEquals(
                 actualNumIndirectBlocks * NUM_PARTIAL_PATHS_TO_STORE,
                 combinedPathsSize,
-                "Each unsigned block should have 2 partial merkle paths. Registered unsigned blocks: "
-                        + partialPathsByBlock);
+                "Each unsigned block should have %s partial merkle paths. Registered unsigned blocks: %s"
+                        .formatted(NUM_PARTIAL_PATHS_TO_STORE, partialPathsByBlock));
         for (long i = firstUnsignedBlockNum; i < signedBlockNum; i++) {
             final var registered = partialPathsByBlock.get(i);
             assertNotNull(
@@ -224,7 +246,7 @@ class IndirectProofSequenceValidator {
     }
 
     /**
-     * Verify all indirect block proofs up to the latest signed block.
+     * Verifies all collected state proofs
      */
     private void verifyIndirectProofs() {
         if (!containsIndirectProofs()) {
@@ -234,18 +256,18 @@ class IndirectProofSequenceValidator {
             throw new IllegalStateException("Cannot verify indirect proofs: signed proof not provided");
         }
 
-        // Verify the number of paths and required total paths size in each reconstructed indirect proof
+        // Verify the number of paths and required total paths size in each reconstructed state proof
         for (long i = firstUnsignedBlockNum; i < signedBlockNum; i++) {
+            final var numRemainingBlocks = signedBlockNum - i;
+            final var totalExpectedSiblings = expectedSiblingsFrom(numRemainingBlocks);
+
             final var numPathsForBlock = expectedIndirectProofs.get(i).paths().size();
             assertEquals(
                     EXPECTED_MERKLE_PATH_COUNT,
                     numPathsForBlock,
-                    ("Mismatch in number of reconstructed indirect proof paths: %s expected vs. %s actual")
+                    "Mismatch in number of reconstructed merkle paths: %s expected vs. %s actual"
                             .formatted(EXPECTED_MERKLE_PATH_COUNT, numPathsForBlock));
 
-            final var numRemainingBlocks = signedBlockNum - i;
-            final var totalExpectedSiblings =
-                    (UNSIGNED_BLOCK_SIBLING_COUNT * (numRemainingBlocks - 1)) + SIGNED_BLOCK_SIBLING_COUNT;
             final var totalActualSiblings = expectedIndirectProofs
                     .get(i)
                     .paths()
@@ -255,14 +277,15 @@ class IndirectProofSequenceValidator {
             assertEquals(
                     totalExpectedSiblings,
                     totalActualSiblings,
-                    "Mismatch in number of reconstructed indirect proof siblings for block %s: %s expected vs. %s actual"
+                    "Mismatch in number of reconstructed siblings for block %s: %s expected vs. %s actual"
                             .formatted(i, totalExpectedSiblings, totalActualSiblings));
         }
 
         // Compare each reconstructed state proof with the actual state proof for each unsigned block
         for (long i = firstUnsignedBlockNum; i < signedBlockNum; i++) {
-            log.info("Verifying indirect proof for block {}", i);
+            log.info("Verifying state proof for block {}", i);
             assertEquals(expectedIndirectProofs.get(i), actualIndirectProofs.get(i));
+            log.info("Actual and expected state proofs for block {} are identical", i);
         }
     }
 
@@ -278,35 +301,36 @@ class IndirectProofSequenceValidator {
         }
 
         final Map<Long, MerklePath[]> fullMerklePathsByBlockNum = new HashMap<>();
-        // For each indirect block, construct the full merkle paths from the partial merkle paths
-
-        // Construct all merkle paths for each pending block between [currentPendingBlock.number(),
+        // Construct the full merkle paths for each pending block between [currentPendingBlock.number(),
         // latestSignedBlockNumber - 1]
 
-        // Merkle Path 1: the block timestamp path (same for all proofs)
+        // Merkle Path 1: the block timestamp path (should be the same for all proofs)
         final var tsBytes = Timestamp.PROTOBUF.toBytes(signedBlockTimestamp);
         final var tsLeaf =
                 MerkleLeaf.newBuilder().blockConsensusTimestamp(tsBytes).build();
         final var mp1 = MerklePath.newBuilder()
                 .leaf(tsLeaf)
-                .nextPathIndex(FINAL_NEXT_PATH_INDEX)
+                .nextPathIndex(FINAL_MERKLE_PATH_INDEX)
                 .build();
 
         // Merkle Path 2: enumerate all sibling hashes for remaining UNSIGNED blocks
-        MerklePath.Builder thisBlocksMp2 = MerklePath.newBuilder();
+        MerklePath.Builder earliestBlockMp2 = MerklePath.newBuilder();
 
-        // Create a set of siblings for all unsigned blocks remaining, plus another set for the signed block
+        // Create a set of siblings for all unsigned blocks remaining, plus another set for the signed block (excluding
+        // its timestamp)
         final var numBlocksRemaining = signedBlockNum - firstUnsignedBlockNum;
-        final var numUnsignedBlocksRemaining = numBlocksRemaining - 1;
-        final var totalSiblings =
-                (int) ((numBlocksRemaining - 1) * UNSIGNED_BLOCK_SIBLING_COUNT) + SIGNED_BLOCK_SIBLING_COUNT;
-        final SiblingNode[] allSiblingHashes = new SiblingNode[totalSiblings];
+        final var totalExpectedSiblings = expectedSiblingsFrom(numBlocksRemaining);
+        final SiblingNode[] allSiblingHashes = new SiblingNode[totalExpectedSiblings];
         var currentBlockNum = firstUnsignedBlockNum;
-        for (int i = 0; i < numUnsignedBlocksRemaining; i++) {
+        for (int i = 0; i < numBlocksRemaining; i++) {
             final var currentBlockPaths = partialPathsByBlock.get(currentBlockNum);
+            if (i == 0) {
+                final var startHash = requireNonNull(currentBlockPaths.right().previousBlockHash());
+                earliestBlockMp2.hash(startHash);
+            }
 
             // Convert sibling hashes
-            final var blockSiblings = currentBlockPaths.right().siblingHashes.stream()
+            final var blockSiblings = currentBlockPaths.right().siblingHashes().stream()
                     .map(s -> new SiblingHash(!s.isFirst(), new Hash(s.siblingHash())))
                     .toList();
             // Copy into the sibling hashes array
@@ -317,50 +341,29 @@ class IndirectProofSequenceValidator {
                         .isLeft(!blockSibling.isRight())
                         .hash(blockSibling.hash().getBytes())
                         .build();
-                ;
             }
-
-            // Convert this pending block's timestamp into a sibling hash
-            final var pbTsBytes = currentBlockPaths.left().leaf().blockConsensusTimestampOrThrow();
-            // Add to the sibling hashes array
-            final var pendingBlockTimestampSiblingIndex = firstSiblingIndex + UNSIGNED_BLOCK_SIBLING_COUNT - 1;
-            // Timestamp is always a left sibling
-            allSiblingHashes[pendingBlockTimestampSiblingIndex] =
-                    SiblingNode.newBuilder().isLeft(true).hash(pbTsBytes).build();
 
             currentBlockNum++;
         }
-
-        // Merkle Path 2 Continued: add sibling hashes for the signed block
-        // Note: the timestamp for this (signed) block was provided in Merkle Path 1 above
-        final var signedBlockPartialPaths = partialPathsByBlock.get(signedBlockNum);
-        final var signedBlockSiblings = signedBlockPartialPaths.right().siblingHashes();
-        final var signedBlockFirstSiblingIndex = (int) (numBlocksRemaining * UNSIGNED_BLOCK_SIBLING_COUNT);
-        for (int i = 0; i < signedBlockSiblings.size(); i++) {
-            final var blockSibling = signedBlockSiblings.get(i);
-            allSiblingHashes[signedBlockFirstSiblingIndex + i] = SiblingNode.newBuilder()
-                    .isLeft(blockSibling.isFirst())
-                    .hash(blockSibling.siblingHash())
-                    .build();
-        }
-        thisBlocksMp2.siblings(Arrays.stream(allSiblingHashes).toList());
+        earliestBlockMp2.siblings(Arrays.stream(allSiblingHashes).toList()).nextPathIndex(FINAL_MERKLE_PATH_INDEX);
 
         // Merkle Path 3: the root path (same for all proofs), and has no data specific to any block
         final var mp3 =
                 MerklePath.newBuilder().nextPathIndex(FINAL_NEXT_PATH_INDEX).build();
 
         // We now have all sibling hashes needed for the earliest unsigned block's proof. Set the value in the map
-        fullMerklePathsByBlockNum.put(firstUnsignedBlockNum, new MerklePath[] {mp1, thisBlocksMp2.build(), mp3});
+        fullMerklePathsByBlockNum.put(firstUnsignedBlockNum, new MerklePath[] {mp1, earliestBlockMp2.build(), mp3});
 
         // Populate each remaining unsigned block's proof with the subset of needed sibling hashes
-        for (long bn = firstUnsignedBlockNum + 1; bn < signedBlockNum; bn++) {
+        for (long currUnsignedBlock = firstUnsignedBlockNum + 1;
+                currUnsignedBlock < signedBlockNum;
+                currUnsignedBlock++) {
             final var newMp2 = MerklePath.newBuilder();
 
-            final var currUnsignedBlockSiblingsSize =
-                    (int) ((signedBlockNum - bn - 1) * UNSIGNED_BLOCK_SIBLING_COUNT) + SIGNED_BLOCK_SIBLING_COUNT;
+            final var currUnsignedBlockSiblingsSize = expectedSiblingsFrom(signedBlockNum - currUnsignedBlock - 1);
             final var currUnsignedBlockSiblings = new SiblingNode[currUnsignedBlockSiblingsSize];
             final var currUnsignedBlockStartingIndex =
-                    (int) ((bn - firstUnsignedBlockNum) * UNSIGNED_BLOCK_SIBLING_COUNT);
+                    (int) ((currUnsignedBlock - firstUnsignedBlockNum) * UNSIGNED_BLOCK_SIBLING_COUNT);
             for (int i = currUnsignedBlockStartingIndex; i < allSiblingHashes.length; i++) {
                 // Copy the subset of sibling hashes from the full set of hashes (note: COPIES the current hash)
                 currUnsignedBlockSiblings[i] = allSiblingHashes[currUnsignedBlockStartingIndex + i]
@@ -370,21 +373,21 @@ class IndirectProofSequenceValidator {
 
             newMp2.siblings(currUnsignedBlockSiblings).nextPathIndex(FINAL_MERKLE_PATH_INDEX);
 
-            // Populate the map with the full merkle paths for this unsigned block number
-            fullMerklePathsByBlockNum.put(bn, new MerklePath[] {mp1, newMp2.build(), mp3});
+            // Populate the map with the full merkle paths for this block number
+            fullMerklePathsByBlockNum.put(currUnsignedBlock, new MerklePath[] {mp1, newMp2.build(), mp3});
         }
 
         return fullMerklePathsByBlockNum;
     }
 
     /**
-     * Verifies the chain of hashes from the earliest block number up to the signed block number
+     * Verifies the chain of hashes from the earliest block number up to the final signed block number
      * are correct
      */
     private void verifyHashSequence() {
-        final var sortedBlockNums =
+        final var sortedBlockNumsWithRootHashes =
                 expectedBlockRootHashes.keySet().stream().sorted().toList();
-        assertFalse(sortedBlockNums.isEmpty(), "No block root hashes to verify in indirect proof sequence");
+        assertFalse(sortedBlockNumsWithRootHashes.isEmpty(), "No block root hashes to verify in proof sequence");
 
         // Verify the earliest block number and the number of computed hashes match the actual
         // proofs stored
@@ -394,51 +397,43 @@ class IndirectProofSequenceValidator {
         assertEquals(
                 firstUnsignedBlockNum,
                 actualMinBlockNum,
-                ("Mismatch in minimum block number beginning indirect proof sequence: %s expected " + "vs. %s actual")
+                "Mismatch in minimum block number beginning indirect proof sequence: %s expected vs. %s actual"
                         .formatted(firstUnsignedBlockNum, actualMinBlockNum));
 
-        final var expectedNumUnsignedBlocks = signedBlockNum - firstUnsignedBlockNum;
+        final var expectedNumBlocks = signedBlockNum - firstUnsignedBlockNum + 1;
         assertEquals(
-                expectedNumUnsignedBlocks,
-                sortedBlockNums.size(),
-                ("Mismatch in number of block root hashes and the expected indirect proofs in "
-                                + "sequence: %s hashes vs. %s expected proofs")
-                        .formatted(sortedBlockNums.size(), expectedNumUnsignedBlocks));
+                expectedNumBlocks,
+                sortedBlockNumsWithRootHashes.size(),
+                "Mismatch in number of actual block proofs and number of expected block proofs in "
+                        + "sequence: %s actual vs. %s expected proofs"
+                                .formatted(sortedBlockNumsWithRootHashes.size(), expectedNumBlocks));
+        final var expectedNumIndirectBlocks = expectedNumBlocks - 1;
         assertEquals(
-                sortedBlockNums.size(),
+                expectedNumIndirectBlocks,
                 actualIndirectProofs.size(),
-                ("Mismatch in number of given block root hashes and actual indirect proofs stored: "
-                                + "%s hashes vs. %s proofs")
-                        .formatted(sortedBlockNums.size(), actualIndirectProofs.size()));
+                "Mismatch in number of given block root hashes and actual state proofs registered: "
+                        + "%s calculated block hashes vs. %s actual state proofs"
+                                .formatted(expectedNumIndirectBlocks, actualIndirectProofs.size()));
 
         // Verify the sequence of hashes by recomputing each block hash from the previous block
         // hash and the indirect proof
+        final var finalExpectedHash = expectedBlockRootHashes.get(signedBlockNum);
         for (long blockNum = firstUnsignedBlockNum; blockNum < signedBlockNum; blockNum++) {
-            final var expectedPreviousBlockHash = expectedBlockRootHashes.get(blockNum);
-            final var expectedBlockHash = expectedBlockRootHashes.get(blockNum);
-            assertNotNull(expectedBlockHash, "Missing expected block hash for block " + blockNum);
+            final var expectedPreviousBlockHash = expectedPreviousBlockRootHashes.get(blockNum);
 
             final var actualBlockStateProof = actualIndirectProofs.get(blockNum);
             assertNotNull(actualBlockStateProof, "Missing indirect state proof for block " + blockNum);
 
-            final int numIndirectBlocksLeftInSequence = (int) (signedBlockNum - blockNum);
-            final var actualBlockHash = blockHashFromProof(
-                    expectedPreviousBlockHash, actualBlockStateProof, numIndirectBlocksLeftInSequence);
+            final var actualBlockHash = blockHashFromStateProof(expectedPreviousBlockHash, actualBlockStateProof);
             assertEquals(
-                    expectedBlockHash,
+                    finalExpectedHash,
                     actualBlockHash,
-                    ("Mismatch in indirect proof chain: block #%s hash does not match expected hash" + " %s")
-                            .formatted(blockNum, expectedBlockHash));
+                    "Mismatch in indirect proof chain: block %s's hash does not match expected hash %s"
+                            .formatted(blockNum, finalExpectedHash));
         }
-
-        log.info(
-                "Successfully verified sequence of indirect state proofs for blocks {} to {}",
-                firstUnsignedBlockNum,
-                signedBlockNum - 1);
     }
 
-    private Bytes blockHashFromProof(
-            final Bytes previousBlockHash, final StateProof stateProof, final int numIndirectBlocksTillSigned) {
+    private Bytes blockHashFromStateProof(final Bytes previousBlockHash, final StateProof stateProof) {
         final List<MerklePath> paths = stateProof.paths();
         assertFalse(paths.isEmpty(), "Expected non-empty merkle paths in state proof");
 
@@ -453,17 +448,17 @@ class IndirectProofSequenceValidator {
         assertTrue(mp1.hasLeaf(), "Expected leaf in Merkle timestamp path at index %s".formatted(signedBlockTimestamp));
         assertTrue(mp1.siblings().isEmpty(), "Expected no siblings in final Merkle timestamp path");
         assertEquals(
-                FINAL_NEXT_PATH_INDEX, mp1.nextPathIndex(), "Mismatch in next path index of timestamp merkle path");
+                FINAL_MERKLE_PATH_INDEX, mp1.nextPathIndex(), "Mismatch in next path index of timestamp merkle path");
 
         final var mp3 = paths.getLast();
-        assertFalse(mp3.hasHash(), "Expected no hash in parent root path");
+        assertFalse(mp3.hasHash(), "Expected no previousBlockHash in parent root path");
         assertFalse(mp3.hasLeaf(), "Expected no leaf in parent root path");
 
         // Verify merkle path 2 and compute the block contents hash
         final var mp2 = paths.get(BLOCK_CONTENTS_PATH_INDEX);
         assertFalse(mp2.hasLeaf(), "Expected no leaf in block contents Merkle path");
         assertEquals(
-                FINAL_NEXT_PATH_INDEX,
+                FINAL_MERKLE_PATH_INDEX,
                 mp2.nextPathIndex(),
                 "Mismatch in next path index of block contents merkle path");
 
@@ -479,18 +474,32 @@ class IndirectProofSequenceValidator {
             }
         }
         // Combine the timestamp with the computed block contents hash to get the final block hash
-        final var timestampBytes = paths.get(0).leafOrThrow().blockConsensusTimestampOrThrow();
+        final var timestampBytes = paths.getFirst().leafOrThrow().blockConsensusTimestampOrThrow();
         final var signedTimestampBytes = Timestamp.PROTOBUF.toBytes(signedBlockTimestamp);
-        assertEquals(signedTimestampBytes, timestampBytes, "Mismatch in signed block timestamp bytes");
-        hash = BlockImplUtils.combine(signedTimestampBytes, hash);
+        assertEquals(signedTimestampBytes, timestampBytes, "Mismatch in signed block's timestamp bytes");
+        final var hashedTsBytes = CommonUtils.noThrowSha384HashOf(signedTimestampBytes);
+        hash = BlockImplUtils.combine(hashedTsBytes, hash);
 
-        // This hash must now equal the root hash of the given block
+        // This hash must now equal the root hash of the signed block
         return hash;
+    }
+
+    private static int expectedSiblingsFrom(final long numUnsignedBlocksRemaining) {
+        // For any arbitrary unsigned block, we expect exactly UNSIGNED_BLOCK_SIBLING_COUNT siblings per unsigned block
+        // in the sequence
+        final var unsignedSiblingCount = (int) (numUnsignedBlocksRemaining * UNSIGNED_BLOCK_SIBLING_COUNT);
+
+        // For the signed block we _do_ include its siblings in the state proof's block contents path, but we _don't_
+        // include the timestamp as a sibling hash. The verification algorithm expects the signed block's timestamp to
+        // be provided separately.
+        return unsignedSiblingCount + +SIGNED_BLOCK_SIBLING_COUNT;
     }
 
     // A quick note: any field in this record can be null depending on which of the three types of merkle path it
     // represents. For example, the timestamp path will have a leaf but no hash, the block contents path will have a
     // hash but no leaf, and the parent path will have neither.
     private record PartialMerklePath(
-            @Nullable MerkleLeaf leaf, @Nullable Bytes hash, @Nullable List<MerkleSiblingHash> siblingHashes) {}
+            @Nullable MerkleLeaf leaf,
+            @Nullable Bytes previousBlockHash,
+            @Nullable List<MerkleSiblingHash> siblingHashes) {}
 }
